Made a API caller utility and controller exceptionhandler

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
     <title>Travel</title>
 </head>
 <body>
-    <a href="http://localhost:8080/api/hey">aodfgiojafijgf</a>
+    <a href="http://localhost:8080/api/hey">http://localhost:8080/api/hey</a>
 </body>
 </html>
