--- a/src/main/resources/static/requestPage.html
+++ b/src/main/resources/static/requestPage.html
@@ -58,12 +58,12 @@
 </head>
 <body>
 <div class="container">
-  <h1>Location Finder</h1>
+  <h1>Input your location detailts</h1>
   <form id="location-form">
-    <label for="start-location">Start Location:</label>
+    <label for="start-location">Departure:</label>
     <input type="text" id="start-location" name="start-location" placeholder="Enter your start location" required>
 
-    <label for="end-location">End Location:</label>
+    <label for="end-location">Destination:</label>
     <input type="text" id="end-location" name="end-location" placeholder="Enter your end location" required>
 
     <button type="submit">Find Route</button>
