--- a/src/main/resources/static/responsePage.html
+++ b/src/main/resources/static/responsePage.html
@@ -57,10 +57,10 @@
 
 <script>
   // Replace the following data with actual data from your backend
-  const weatherInfo = "Placeholder weather info";
+  const weatherInfo = "tour guide info";
 
 
-  document.getElementById("weather-info").textContent = weatherInfo;
+  document.getElementById("tour-info").textContent = weatherInfo;
 
 </script>
 </body>
